src/objects/accc_Org_Events__b.object
<CustomObject>

    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
	
   <fields>
        <fullName>Event_Json__c</fullName>
        <label>Event JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>

   <fields>
        <fullName>Operation_Ids__c</fullName>
        <label>Operation Ids</label>
        <length>131072</length>
	 
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
	
	 <fields>
        <fullName>Event_Date_Day__c</fullName>
        <label>Event Day</label>
        <required>true</required>
         <type>Number</type>
        <scale>0</scale>
        <precision>2</precision>
    </fields>
	
	 <fields>
        <fullName>Replay_Ids__c</fullName>
        <label>ReplayIds</label>
        <length>131072</length>
	 
        <type>LongTextArea</type>
    </fields>
	 <fields>
        <fullName>Event_Date_Month__c</fullName>
        <label>Event Month</label>
        <required>true</required>
        <type>Number</type>
        <scale>0</scale>
        <precision>2</precision>
    </fields>
	
	 <fields>
        <fullName>Event_Date_Year__c</fullName>
        <label>Event Year</label>
        <required>true</required>
        <type>Number</type>
        <scale>0</scale>
        <precision>4</precision>
    </fields>
	
	 <fields>
        <fullName>Event_Truncated__c</fullName>
        <label>Event Truncated</label>
        <required>true</required>
        <type>Number</type>
		<scale>0</scale>
        <precision>2</precision>
    </fields>

    <fields>
        <fullName>Number_Of_Events__c</fullName>
        <label>Number of Events</label>
        <required>true</required>
        <type>Number</type>
        <scale>0</scale>
        <precision>10</precision>
    </fields>

    <indexes>
        <fullName>OrgEventIndex</fullName>
        <label>Org Event Index</label>
			<fields>
				<name>Event_Date__c</name>
				<sortDirection>DESC</sortDirection>
			</fields>  
			<fields>
				<name>Event_Date_Year__c</name>
				<sortDirection>DESC</sortDirection>
			</fields>  
			<fields>
				<name>Event_Date_Month__c</name>
				<sortDirection>DESC</sortDirection>
			</fields>  	
			<fields>
				<name>Event_Date_Day__c</name>
				<sortDirection>DESC</sortDirection>
			</fields>  			
			<fields>
				<name>Event_Truncated__c</name>
				<sortDirection>DESC</sortDirection>
			</fields>    	
			
    </indexes>
    
    <label>Org Event</label>
    <pluralLabel>Org Events</pluralLabel>
</CustomObject>